--- a/ionic-angular-template/src/auth/sign-up/sign-up.component.html
+++ b/ionic-angular-template/src/auth/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <ion-title>Register</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -44,7 +44,7 @@
               </ion-item>
             </ion-list>
             <div class="ion-float-right ion-margin-top ion-margin-bottom">Have an account?  
-              <a [routerLink]="['/forgotPassword']">Log in
+              <a [routerLink]="['/signin']">Log in
               </a>
             </div>
             <ion-button
